[metadata]
name = raycast
version = attr: raycast.__version__
description = raycast
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/DigiDuncan/raycast
    Tracker=https://github.com/DigiDuncan/raycast/issues

[options]
packages = find:
python_requires = >=3.10
zip_safe = yes
include_package_data = True
install_requires =
    

[options.extras_require]
dev =
    pytest==7.1.2
    flake8==5.0.3
    autopep8==1.6.0

[options.entry_points]
console_scripts =
    raycast = raycast.main:main

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
